--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,10 @@
-# Node.js / React frontend
+# Ignore node_modules
 frontend/node_modules/
-frontend/.pnp
-frontend/.pnp.js
-frontend/coverage/
-frontend/build/
-frontend/.DS_Store
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
 
-# Python / Flask backend
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
+# Ignore Python virtual environment
 venv/
-env/
-ENV/
-.env
-*.env
-.venv
-.flaskenv
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
-.hypothesis/
-.pytest_cache/
 
-# Database
-*.sqlite
-*.db
-
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-.DS_Store
-
-# Logs
-logs/
+# Ignore other common files
 *.log
-
-# Models and data (depending on your preferences)
-# Uncomment if you don't want to version these
-# data/
-# models/*.pkl
-
-# Jupyter Notebooks
-.ipynb_checkpoints
+*.pyc
+__pycache__/
